--- a/misas-thai-street-cuisine-2.0/Components/CartMenuItem.razor.css
+++ b/misas-thai-street-cuisine-2.0/Components/CartMenuItem.razor.css
@@ -151,6 +151,14 @@
         background: #ee6900;
         color: #fff;
     }
+
+.portion-guide {
+    font-size: 0.75rem;
+    color: #888;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 0.5rem;
+    text-align: center;
+}
 @media (max-width: 1024px) {
     .cart-menu-item {
         flex-direction: column;
