converted imagas to webp format for efficiency

--- a/misas-thai-street-cuisine-2.0/Pages/Home.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Home.razor
@@ -73,10 +73,10 @@
 
     private List<string> CarouselImages = new()
     {
-        "/Resources/Images/HomepageCarousel/ms-platter.png",
-        "/Resources/Images/HomepageCarousel/ms-platter-2.png",
-        "/Resources/Images/HomepageCarousel/chicken-platter.png",
-        "/Resources/Images/HomepageCarousel/sausage-combo.png"
+        "/Resources/Images/HomepageCarousel/ms-platter.webp",
+        "/Resources/Images/HomepageCarousel/ms-platter-2.webp",
+        "/Resources/Images/HomepageCarousel/chicken-platter.webp",
+        "/Resources/Images/HomepageCarousel/sausage-combo.webp"
     };
 
     protected override async Task OnInitializedAsync()
